zellij-integration-tests/tests/snapshots/panes__new_pane_while_fullscreen_breaks_out_of_fullscreen.snap
---
source: zellij-integration-tests/tests/panes.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                           Pane #1                         │                           Pane #2
$                                                          │$
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           ├────────────────────────────────────────────────────────────
                                                           │                           Pane #3
                                                           │$ █
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
