zellij-integration-tests/tests/snapshots/panes__toggle_pane_pinned.snap
---
source: zellij-integration-tests/tests/panes.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1 
┌ Pane #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│$                                                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                             ┌ Pane #2 ──────────────────────────────────────── PIN [+] ┐                             │
│                             │$ █                                                       │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             └──────────────────────────────────────────────────────────┘                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
